--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
+
+html, body {
+	padding: 0px;
+	margin: 0px;
+	overflow: hidden;
+}
+
+canvas {
+	width: 100%;
+	height: 100%;
+}
+
 .App {
   text-align: center;
 }
@@ -22,6 +34,8 @@
 .App-link {
   color: #61dafb;
 }
+
+
 
 @keyframes App-logo-spin {
   from {
