--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,11 @@ html, body {
 
 canvas {
 	width: 100%;
-	height: 100%;
+  height: 100%;
+  position: fixed;
+  left: 0;
+  top: 0;
+  opacity: 1;
 }
 
 .App {
