--- a/src/App.scss
+++ b/src/App.scss
@@ -2,7 +2,22 @@
 html, body {
 	padding: 0px;
 	margin: 0px;
-	overflow: hidden;
+  overflow: hidden;
+}
+
+html {
+  background: #333;
+}
+
+.absolute-center {
+  margin: auto;
+  position: absolute;
+  top: 0; left: 0; bottom: 0; right: 0;
+}
+
+.home {
+  text-align: center;
+  color: white;
 }
 
 canvas {
@@ -13,31 +28,7 @@ canvas {
   top: 0;
   opacity: 0.8;
   z-index: -1;
-}
-
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
+  animation: fade-in-80 2s ease-in;
 }
 
 button {
@@ -66,11 +57,11 @@ button {
   background: red;
 }
 
-@keyframes App-logo-spin {
+@keyframes fade-in-80 {
   from {
-    transform: rotate(0deg);
+    opacity: 0;
   }
   to {
-    transform: rotate(360deg);
+    opacity: 0.8;
   }
 }
