--- a/src/App.scss
+++ b/src/App.scss
@@ -9,15 +9,41 @@ html {
   background: #333;
 }
 
+.fade-enter {
+  opacity: 0;
+  z-index: 1;
+  &.fade-enter-active {
+    opacity: 1;
+    transition: opacity 250ms ease-in;
+  }
+}
+
+.fade-exit {
+  opacity: 1;
+  z-index: 1;
+  &.fade-exit-active {
+    opacity: 0;
+    transition: opacity 250ms ease-in;
+  }
+}
+
+
 .absolute-center {
-  margin: auto;
   position: absolute;
-  top: 0; left: 0; bottom: 0; right: 0;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  max-width: 800px;
+  width: 100%;
 }
 
 .home {
   text-align: center;
   color: white;
+}
+
+ul.nav {
+  border: 1px solid red;
 }
 
 canvas {
