--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,9 @@ html, body {
 	padding: 0px;
 	margin: 0px;
   overflow: hidden;
+  * {
+    box-sizing: border-box;
+  }
 }
 
 html {
@@ -43,7 +46,24 @@ html {
 }
 
 ul.nav {
-  border: 1px solid red;
+  margin: 0px;
+  padding: 10px;
+  width: 100%;
+  text-align: right;
+  background: rgba(255,255,255,0.8);
+  li {
+    display: inline;
+    a {
+      color: black;
+      padding: 10px;
+      text-decoration: none;
+      text-transform: uppercase;
+      &:hover {
+        background: black;
+        color: white;
+      }
+    }
+  }
 }
 
 canvas {
