--- a/src/App.scss
+++ b/src/App.scss
@@ -12,7 +12,41 @@ html {
   background: #333;
 }
 
+
+// Type //
+span {
+  &.bar {
+    display: block;
+    width: 100%;
+  }
+}
+
+h1 {
+  &.hero {
+    div {
+      display: inline-flex;
+    }
+    font-size: 13vw;
+    color: rgb(242, 239, 232);
+    font-family: 'Barlow Condensed', san-serif;
+    font-weight: 800;
+    transform: rotate(-10deg) skew(-3deg, 0);
+    font-style: italic;
+    margin-left: -100px;
+    margin-right: -100px;
+    //background: rgba(56, 13, 13, 0.8);
+    //line-height: 50%;
+    text-shadow: 11px 8px rgba(56, 13, 13, 0);
+    animation: text-shadow 0.5s ease-in-out forwards;
+    animation-delay: 4.5s;
+  }
+}
+
+
 .page {
+  
+ 
+  margin: 0 auto;
   &:nth-child(1) {
     &.move-enter {
 
@@ -194,5 +228,14 @@ button {
   }
   to {
     opacity: 0.8;
+  }
+}
+
+@keyframes text-shadow {
+  from {
+    text-shadow: 0px 0px rgba(56, 13, 13, 0);
+  }
+  to {
+    text-shadow: 11px 8px rgba(56, 13, 13, 0.6);
   }
 }
