--- a/src/App.scss
+++ b/src/App.scss
@@ -53,27 +53,46 @@ h1 {
     div {
       display: inline-flex;
     }
-    font-size: 13vw;
-    color: rgb(242, 239, 232);
+    font-size: 16vw;
+    color: rgba(242, 239, 232, 1);
     font-family: 'Barlow Condensed', san-serif;
     font-weight: 800;
-    transform: rotate(-10deg) skew(-3deg, 0);
     font-style: italic;
     margin-left: -100px;
     margin-right: -100px;
     //background: rgba(56, 13, 13, 0.8);
     //line-height: 50%;
-    text-shadow: 11px 8px rgba(56, 13, 13, 0);
-    animation: text-shadow 0.5s ease-in-out forwards;
-    animation-delay: 4.5s;
+    
+    transform: rotate(-10deg) skew(-3deg, 0);    
+    .animated {
+      span {
+        text-shadow: 11px 8px rgba(56, 13, 13, 0);
+        animation: text-shadow 1s ease-in-out forwards;
+        transform: translateX(1vw);
+      }
+      
+      &:nth-child(1) {
+        span {
+          animation-delay: 3.1s;
+        }
+          
+      }
+      &:nth-child(2) {
+        span {
+          animation-delay: 3.3s;
+        }
+      }
+    
+    }
+    
   }
 }
 
 h2 {
   span {
     display: inline-block;
-    margin: 0px -1.25vw;
-    font-size: 4vw;
+    margin: 0px -15px;
+    font-size: 48px;
     vertical-align: super;
   }
     a {
@@ -84,12 +103,12 @@ h2 {
       padding: 10px 0px;
       display: inline-block;
       white-space: nowrap;
-      width: 0vw;
+      width: 0px;
       overflow: hidden;
       text-align: center;
 
       animation: expand 0.5s ease-in-out forwards;
-      animation-delay: 5.5s;
+      animation-delay: 6s;
     }
 }
 
@@ -263,20 +282,22 @@ canvas {
 
 @keyframes text-shadow {
   from {
-    text-shadow: 0px 0px rgba(56, 13, 13, 0);
+    text-shadow: 0vw 0vw rgba(56, 13, 13, 0);
+    transform: translateX(1vw);
   }
   to {
-    text-shadow: 11px 8px rgba(56, 13, 13, 0.6);
+    text-shadow: 0.5vw 0.5vw rgba(56, 13, 13, 0.6);
+    transform: translateX(0vw);
   }
 }
 
 @keyframes expand {
   from {
     outline: 0px solid #f2efe8;
-    width: 0vw;
+    width: 0px;
   }
   to {
     outline: 1px solid #f2efe8;
-    width: 13vw;
+    width: 200px;
   }
 }
