--- a/src/App.scss
+++ b/src/App.scss
@@ -23,6 +23,20 @@ button {
   cursor: pointer;
 }
 
+.scene {
+  display: none;
+  height: 200px;
+  text-align: center;
+  border: 1px solid red;
+  h3 {
+    height: 30px;
+    p {
+      display: block;
+      height: 30px;
+    }
+  }
+}
+
 .pumpkin {
   background: rgb(255, 115, 0);
 }
