--- a/src/App.scss
+++ b/src/App.scss
@@ -277,6 +277,28 @@ canvas {
   animation: fade-in-80 2s ease-in;
 }
 
+
+.App-logo {
+  animation: App-logo-spin infinite 20s linear;
+  height: 20vmin;
+  cursor: pointer;
+}
+/* new class here */
+.App-logo-paused {
+  animation-play-state: paused;
+}
+
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+
 @keyframes fade-in-80 {
   from {
     opacity: 0;
