--- a/src/App.scss
+++ b/src/App.scss
@@ -65,6 +65,17 @@ h1 {
     
     transform: rotate(-10deg) skew(-3deg, 0);    
     .animated {
+      &.fadeOutUp {
+        span {
+          text-shadow: 0.5vw 0.5vw rgba(56, 13, 13, 0.6);
+          transform: translateX(0vw);
+        }
+      }
+
+      &.fadeInDown {
+        //animation: text-shadow 1s ease-in-out forwards;
+      }
+
       span {
         text-shadow: 11px 8px rgba(56, 13, 13, 0);
         animation: text-shadow 1s ease-in-out forwards;
