--- a/src/App.scss
+++ b/src/App.scss
@@ -226,7 +226,12 @@ h2 {
   }
 }  
 
-
+.slides {
+  -webkit-transition: all 0.3s ease-out;
+  -moz-transition: all 0.3s ease-out;
+  -o-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
+}
 
 .slide {
   text-align: center;
