--- a/src/App.scss
+++ b/src/App.scss
@@ -60,6 +60,11 @@ span {
 
 h1 {
   &.hero {
+
+
+
+
+
     div {
       display: inline-flex;
     }
@@ -69,17 +74,27 @@ h1 {
     font-family: 'Montserrat', san-serif;
     font-weight: 900;
     font-style: italic;
-    margin-left: -120px;
+    margin-left: -130px;
     margin-right: -100px;
     letter-spacing: -0.02em;
     //background: rgba(56, 13, 13, 0.8);
     //line-height: 50%;
+    transform: rotate(-10deg) skew(-3deg, 0);   
     
-    transform: rotate(-10deg) skew(-3deg, 0);    
+    span {
+      text-shadow: -2px 1px 2px rgba(0, 0, 0, 0.11);
+      -webkit-background-clip: text;
+      -moz-background-clip: text;
+      background-clip: text;
+      background-color: rgba(255,255,255,1);
+      color: transparent;
+      padding: 7px;
+    }
+    
     .animated {
       &.fadeOutUp {
         span {
-          text-shadow: 0.5vw 0.5vw rgba(56, 13, 13, 0.6);
+          text-shadow: -2px 1px 2px rgba(0, 0, 0, 0.11);
           transform: translateX(0vw);
         }
       }
@@ -89,20 +104,22 @@ h1 {
       }
 
       span {
-        /*text-shadow: 11px 8px rgba(56, 13, 13, 0);
-        animation: text-shadow 1s ease-in-out forwards;*/
-        transform: translateX(1vw);
+        text-shadow: 0px 0px 0px rgba(0, 0, 0, 0.2);
+        animation: text-shadow 1s ease-in-out forwards;
+        transform: translateX(0.2vw);
+
+
       }
       
       &:nth-child(1) {
         span {
-          animation-delay: 3.1s;
+          animation-delay: 2.1s;
         }
           
       }
       &:nth-child(2) {
         span {
-          animation-delay: 3.3s;
+          animation-delay: 2.3s;
         }
       }
     
@@ -112,9 +129,12 @@ h1 {
 }
 
 h2 {
+
+
+  
   span {
     display: inline-block;
-    margin: 0px -15px;
+    margin: 0px 6px;
     font-size: 48px;
     vertical-align: super;
   }
@@ -131,7 +151,7 @@ h2 {
       text-align: center;
 
       animation: expand 0.5s ease-in-out forwards;
-      animation-delay: 6s;
+      animation-delay: 4s;
     }
 }
 
@@ -154,6 +174,16 @@ h2 {
     transform: rotate(-10deg) skew(-3deg, 0);    
     text-transform: uppercase;
     font-size: 43px;
+
+    span {
+      text-shadow: -2px 1px 3px rgba(0, 0, 0, 0.12);
+      -webkit-background-clip: text;
+      -moz-background-clip: text;
+      background-clip: text;
+      background-color: rgba(255,255,255,1);
+      color: transparent;
+      padding: 7px;
+    }
   }
   height: 100%;
 }
@@ -360,11 +390,11 @@ canvas {
 
 @keyframes text-shadow {
   from {
-    text-shadow: 0vw 0vw rgba(56, 13, 13, 0);
-    transform: translateX(1vw);
+    text-shadow: 0px 0px 0px rgba(0, 0, 0, 0.2);
+    transform: translateX(0.2vw);
   }
   to {
-    text-shadow: 0.5vw 0.5vw rgba(56, 13, 13, 0.6);
+    text-shadow: -2px 1px 2px rgba(0, 0, 0, 0.11);
     transform: translateX(0vw);
   }
 }
