--- a/src/App.scss
+++ b/src/App.scss
@@ -10,11 +10,14 @@ html, body {
 
 html {
   background: #333;
+
+  // only here for production
+  background: #de9458;
 }
 
 
 button {
-  width: 33%;
+  width: 33%; 
   background: white;
   border: none;
   padding: 10px;
@@ -56,6 +59,13 @@ span {
     border-width: 28.5px 0 28.5px 34px!important;
   }
   transform: scale(0.5)!important;
+
+  text-shadow: -2px 1px 2px rgba(0, 0, 0, 0.11);
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  background-clip: text;
+  background-color: rgba(255,255,255,1);
+  color: transparent;
 } 
 
 h1 {
@@ -94,8 +104,8 @@ h1 {
     .animated {
       &.fadeOutUp {
         span {
-          text-shadow: -2px 1px 2px rgba(0, 0, 0, 0.11);
-          transform: translateX(0vw);
+          //text-shadow: -2px 1px 2px rgba(0, 0, 0, 0.11);
+          //transform: translateX(0vw);
         }
       }
 
@@ -104,9 +114,9 @@ h1 {
       }
 
       span {
-        text-shadow: 0px 0px 0px rgba(0, 0, 0, 0.2);
-        animation: text-shadow 1s ease-in-out forwards;
-        transform: translateX(0.2vw);
+        //text-shadow: 0px 0px 0px rgba(0, 0, 0, 0.2);
+        //animation: text-shadow 1s ease-in-out forwards;
+        //transform: translateX(0.2vw);
 
 
       }
@@ -355,6 +365,9 @@ canvas {
   opacity: 0.8;
   z-index: -1;
   animation: fade-in-80 2s ease-in;
+
+  // only enabled now for production reasons
+  display: none;
 }
 
 
