--- a/src/App.scss
+++ b/src/App.scss
@@ -12,7 +12,7 @@ html {
   background: #333;
 
   // only here for production
-  background: #de9458;
+  //background: #de9458;
 }
 
 
@@ -166,10 +166,20 @@ h2 {
 }
 
 .work {
+  .fp-slidesContainer {
+    //animation-delay: 600ms;
+  }
+
+  .slide {
+    opacity: 0;
+    &.active {
+      opacity: 1;
+    };
+  }
   .fp-tableCell {
     position: relative;
     .animated {
-      height: 100%;
+      //height: 100%;
     }
   }
   h2 {
@@ -180,12 +190,13 @@ h2 {
     font-weight: 900;
     font-style: italic;
     color: #f2efe8;
-    transform: translateX(1vw);
-    transform: rotate(-10deg) skew(-3deg, 0);    
     text-transform: uppercase;
     font-size: 43px;
 
     span {
+      
+    transform: translateX(1vw);
+    transform: rotate(-10deg) skew(-3deg, 0);    
       text-shadow: -2px 1px 3px rgba(0, 0, 0, 0.12);
       -webkit-background-clip: text;
       -moz-background-clip: text;
@@ -367,7 +378,7 @@ canvas {
   animation: fade-in-80 2s ease-in;
 
   // only enabled now for production reasons
-  display: none;
+  //display: none;
 }
 
 
