--- a/src/App.scss
+++ b/src/App.scss
@@ -378,7 +378,7 @@ canvas {
   animation: fade-in-80 2s ease-in;
 
   // only enabled now for production reasons
-  //display: none;
+  display: none;
 }
 
 
