--- a/src/App.scss
+++ b/src/App.scss
@@ -46,6 +46,7 @@ hr {
   border: 0px;
   height: 1px;
   background: white;
+  //transform: rotate(-10deg) skew(-3deg, 0);   
   max-width: 40px;
   width: 100%;
   margin: 50px auto;
