--- a/src/App.scss
+++ b/src/App.scss
@@ -490,6 +490,7 @@ h2 {
     img {
       width: 50px;
       height: auto; 
+      vertical-align: middle;
       &.NBN {
         width: 80px;
       }
@@ -543,7 +544,7 @@ canvas {
   animation: fade-in-80 2s ease-in;
 
   // only enabled now for production reasons
-  //display: none;
+  display: none;
 }
 
 
