--- a/src/App.scss
+++ b/src/App.scss
@@ -55,15 +55,49 @@ hr {
 // Navigation
 
 #sidebar {
+  .sidebar {
+    width: 100%;
+    pointer-events: none;
+    z-index: 3!important;
+  }
+  .sidebar-overlay {
+    z-index: 2!important;
+    background-color: rgba(0,0,0,.7)!important;
+  }
   ul {
     padding: 0;
+    position: relative;
+    top: 50%;
+    margin-top: -20%;
     li {
       list-style: none;
       a {
-        padding: 10px 140px 10px 20px;
+        pointer-events: all;
+        padding: 10px 20px 10px 20px;
         display: block;
+        text-align: center;
         text-decoration: none;
-        color:black;
+        font-family: 'Montserrat', san-serif;
+        font-weight: 800;
+        color:rgba(255,255,255,0.8  );
+        font-size: 9vw;
+
+
+/*
+      text-shadow: -2px 1px 2px rgba(0, 0, 0, 0.11);
+      -webkit-background-clip: text;
+      -moz-background-clip: text;
+      background-clip: text;
+      background-color: rgba(255,255,255,1);
+      color: transparent;
+*/
+        sup {
+          vertical-align: text-top;
+          font-weight: 300;
+          //display: none;
+          font-size: 2vw;
+
+        }
       }
     }
   }
