--- a/src/App.scss
+++ b/src/App.scss
@@ -12,7 +12,7 @@ html {
   background: #333;
 
   // only here for production
-  background: #de9458;
+  //background: #de9458;
 }
 
 
@@ -59,6 +59,7 @@ hr {
     width: 100%;
     pointer-events: none;
     z-index: 3!important;
+    transform: translateX(0%)!important;
   }
   .sidebar-overlay {
     z-index: 2!important;
@@ -72,6 +73,11 @@ hr {
     li {
       list-style: none;
       a {
+        &:hover {
+          color:rgba(255,255,255,1);
+          letter-spacing: 0.6vw;
+        }
+        transition: all 300ms ease-in-out;
         pointer-events: all;
         padding: 10px 20px 10px 20px;
         display: block;
@@ -79,8 +85,9 @@ hr {
         text-decoration: none;
         font-family: 'Montserrat', san-serif;
         font-weight: 800;
-        color:rgba(255,255,255,0.8  );
+        color:rgba(255,255,255,0.8);
         font-size: 9vw;
+
 
 
 /*
@@ -94,7 +101,7 @@ hr {
         sup {
           vertical-align: text-top;
           font-weight: 300;
-          //display: none;
+          display: none;
           font-size: 2vw;
 
         }
@@ -608,7 +615,7 @@ canvas {
   animation: fade-in-80 2s ease-in;
 
   // only enabled now for production reasons
-  display: none;
+  //display: none;
 }
 
 
