--- a/src/App.scss
+++ b/src/App.scss
@@ -158,6 +158,10 @@ hr {
     vertical-align: top;
     padding: 5px 10px;
     z-index: 1;
+    color: white;
+    span {
+      color: white;
+    }
   }
 }
 
