--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,8 @@
 // media queries
+@mixin for-extra-extra-small-phone-only {
+  @media (max-width: 325px) { @content; }
+}
+
 @mixin for-extra-small-phone-only {
   @media (max-width: 375px) { @content; }
 }
@@ -453,6 +457,7 @@ h2 {
       .workMobile {
         //background: rgba(0, 0, 0, 0.3);
         width: 200px;
+        //width: 100%;
         //border: 1px solid red;
         height: 60%;
         position: absolute;
@@ -462,15 +467,24 @@ h2 {
         bottom: 0px;
         right: 20px;
         @include for-phone-only {
-          position: relative;
+          overflow: hidden;
+          position: absolute;
           max-width: 250px;
           width: 90%;
-          margin: 10px auto;
-          right: 0px;
-          left: 0px;
+          height: 500px;
+          margin: 60px auto auto auto;
           top: 0px;
+          right: 0px;
           bottom: 0px;
-          height: auto;
+          left: 0px;
+        }
+        @include for-small-phone-only {
+          height: 420px;
+          margin: auto;
+        }
+        @include for-extra-extra-small-phone-only {
+          height: 377px;
+          margin: 60px auto auto auto;
         }
       }
     }
@@ -768,6 +782,11 @@ h2 {
         }
         @include for-small-phone-only {
           padding: 2px;
+        }
+        @include for-extra-extra-small-phone-only {
+          &:nth-last-child(1) {
+            display: none;
+          }
         }
       }
     }
