--- a/src/App.scss
+++ b/src/App.scss
@@ -233,6 +233,7 @@ span {
   */
 } 
 
+
 h1 {
   &.hero {
 
@@ -306,6 +307,15 @@ h1 {
   }
 }
 
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {  
+  /* IE10+ specific styles go here */  
+  h1.hero span {
+        background-color: transparent;
+        color: white;
+  }
+}
+
+
 h2 {
   &.subhead {
     
@@ -320,7 +330,7 @@ h2 {
       span {
         
         transform: translateX(1vw);
-        transform: rotate(-10deg) skew(-3deg, 0);    
+        transform: rotate(-10deg) skew(-3deg, 0) translate3d(0px,0px,1px);    
         
         padding: 0px;
         display: inline-block;
@@ -347,8 +357,8 @@ h2 {
 
 
     transform: translateX(1vw);
-    transform: rotate(-10deg) skew(-3deg, 0);
-
+    transform: rotate(-10deg) skew(-3deg, 0) translate3d(0px,0px,1px);
+    
     margin-top: -9%;
     margin-bottom: 60px;
     &.cta {
@@ -820,7 +830,12 @@ h2 {
     }
   }
 }
-
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {  
+  /* IE10+ specific styles go here */ 
+  .about .logo-container img {
+    height: 100%;
+  } 
+}
 ul.nav {
   margin: 0px;
   padding: 10px;
