--- a/src/App.scss
+++ b/src/App.scss
@@ -195,28 +195,27 @@ span {
 }
 
 .fp-controlArrow {
-  font-family: "Font Awesome 5 Pro";
-  font-weight: 900;
-  font-size: 2em;
-  color: white;
-  -webkit-font-smoothing: antialiased;
-  display: inline-block;
-  font-style: normal;
-  font-variant: normal;
-  text-rendering: auto;
-  line-height: 1;
+
   &.fp-prev {
     border: none;
     &:before {
       content: "\f053";
+      position: absolute;
+      width: 40px;
+      height: 40px;
+      text-indent: -9999px;
     }
     //border-width: 28.5px 34px 28.5px 0!important;
   }
   &.fp-next {
     border: none;
-    right: 30px!important;
+    right: 50px!important;
     &:before {
       content: "\f054";
+      position: absolute;
+      width: 40px;
+      height: 40px;
+      text-indent: -9999px;
     }
     //border-width: 28.5px 0 28.5px 34px!important;
   }
@@ -388,7 +387,7 @@ h2 {
       overflow: hidden;
       text-align: center;
       font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Helvetica Neue", Sans-serif;
-      font-weight: 100;
+      font-weight: 300;
       //margin-bottom: -150%;
     }
 }
@@ -741,7 +740,7 @@ h2 {
   h3 {
     margin: 0;
     font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Helvetica Neue", Sans-serif;
-    font-weight: 100;
+    font-weight: 300;
   }
 
   .heroContainer {
