--- a/src/App.scss
+++ b/src/App.scss
@@ -30,9 +30,13 @@ html, body {
 	margin: 0px;
   overflow: hidden;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Helvetica Neue", Sans-serif;
+  
   * {
     box-sizing: border-box;
   }
+}
+
+.animated {
 }
 
 html {
@@ -237,7 +241,8 @@ h1 {
   &.hero {
 
 
-
+    .animated {
+    }
 
 
     div {
@@ -265,6 +270,11 @@ h1 {
       background-color: rgba(255,255,255,1);
       color: transparent;
       padding: 11px;
+
+      //color: white;
+      //background: transparent;
+      //-webkit-background-clip: initial;
+
       @include for-phone-only {
         padding: 3px;
       }
