--- a/src/App.scss
+++ b/src/App.scss
@@ -25,6 +25,35 @@
   @media (min-width: 1800px) { @content; }
 }
 
+@mixin for-ipad-portrait-and-landscape {
+  @media only screen 
+  and (min-width: 1024px) 
+  and (max-height: 1366px) 
+  and (-webkit-min-device-pixel-ratio: 1.5) {
+    @content;
+  }
+}
+
+@mixin for-ipad-portrait {
+  @media only screen 
+    and (min-width: 1024px) 
+    and (max-height: 1366px) 
+    and (orientation: portrait) 
+    and (-webkit-min-device-pixel-ratio: 1.5) {
+      @content;
+  }
+}
+
+@mixin for-ipad-landscape {
+  @media only screen 
+    and (min-width: 1024px) 
+    and (max-height: 1366px) 
+    and (orientation: landscape) 
+    and (-webkit-min-device-pixel-ratio: 1.5) {
+      @content;
+  }
+}
+
 html, body {
 	padding: 0px;
 	margin: 0px;
@@ -187,6 +216,7 @@ span {
   width: 100%;
   position: fixed;
   z-index: 1;
+  background: none;
   cursor: pointer;
 }
 
@@ -271,9 +301,17 @@ h1 {
       color: transparent;
       padding: 11px;
 
+
       //color: white;
       //background: transparent;
       //-webkit-background-clip: initial;
+
+
+      @include for-ipad-portrait-and-landscape() {
+        color: white;
+        background: transparent;
+        -webkit-background-clip: initial;     
+      }
 
       @include for-phone-only {
         padding: 3px;
@@ -388,7 +426,7 @@ h2 {
       transform: none;
       color: #f2efe8;
       background: transparent;
-      outline: 0px solid #f2efe8;
+      //outline: 0px solid #f2efe8;
       text-decoration: none;
       padding: 10px 0px;
       display: inline-block;
