--- a/src/App.scss
+++ b/src/App.scss
@@ -153,6 +153,12 @@ hr {
   }
   
   button {
+
+
+
+    &:focus {
+      outline: none;
+    }
     cursor: pointer;
     border: none;
       div {
@@ -193,6 +199,8 @@ hr {
       }
     }
 
+
+
   }
 
 
@@ -227,7 +235,9 @@ span {
   cursor: pointer;
   background: none;
 
-  
+  &:focus {
+    outline: none;
+  }
 }
 
 .scroll-up {
@@ -416,6 +426,7 @@ h2 {
       font-style: normal;
       margin: 0px;
       position: absolute;
+      bottom: 30px;
     } 
   }
   span {
@@ -594,6 +605,8 @@ h2 {
       width: 100%;
       bottom: 20px;
       text-align: center;
+      
+    text-shadow: -2px 1px 1px rgba(0, 0, 0, 0.4);
     }
   }
   .macbank {
@@ -630,6 +643,9 @@ h2 {
       bottom: 0px!important;
       left: 0px;
       top: inherit;
+      
+    text-shadow: -2px 1px 1px rgba(0, 0, 0, 0.4);
+
     }
   }
   height: 100%;
@@ -983,22 +999,22 @@ canvas {
 
 @keyframes expandIn {
   from {
-    outline: 0px solid #f2efe8;
+    //outline: 0px solid #f2efe8;
     width: 0px;
   }
   to {
-    outline: 1px solid #f2efe8;
+    //outline: 1px solid #f2efe8;
     width: 200px;
   }
 }
 
 @keyframes expandOut {
   from {
-    outline: 1px solid #f2efe8;
+    //outline: 1px solid #f2efe8;
     width: 200px;
   }
   to {
-    outline: 0px solid #f2efe8;
+    //outline: 0px solid #f2efe8;
     width: 0px;
   }
 }
