--- a/src/App.scss
+++ b/src/App.scss
@@ -46,8 +46,8 @@
 
 @mixin for-ipad-landscape {
   @media only screen 
-    and (min-width: 1024px) 
-    and (max-height: 1366px) 
+    and (min-device-width: 1024px) 
+    and (max-device-height: 1366px) 
     and (orientation: landscape) 
     and (-webkit-min-device-pixel-ratio: 1.5) {
       @content;
@@ -107,7 +107,10 @@ hr {
 }
 
 // Navigation
-
+.sidebar-container {
+  z-index: 1;
+  pointer-events: none;
+}
 
 #sidebar {
   
@@ -122,6 +125,7 @@ hr {
     cursor: pointer;
     z-index: 3!important;
     background-color: rgba(0,0,0,.7)!important;
+    pointer-events: all;
   }
   ul {
     padding: 0;
@@ -184,7 +188,7 @@ hr {
   
   button {
 
-
+    pointer-events: all;
 
     &:focus {
       outline: none;
@@ -206,13 +210,10 @@ hr {
     text-align: right;
     vertical-align: top;
     z-index: 2;
+    -webkit-transform:translateZ(10px);
     color: white;
     width: 50px;
     padding: 5px 10px;
-
-    @include for-ipad-portrait-and-landscape {
-      display: none;
-    }
     span {
       color: white;
     }
@@ -358,11 +359,12 @@ h1 {
       //background: transparent;
       //-webkit-background-clip: initial;
 
-
-      @include for-ipad-portrait-and-landscape() {
-        color: white;
-        background: transparent;
-        -webkit-background-clip: initial;     
+      .ios & {
+        @include for-ipad-portrait-and-landscape() {
+          color: white;
+          background: transparent;
+          -webkit-background-clip: initial;     
+        }
       }
 
       @include for-phone-only {
@@ -515,8 +517,10 @@ h2 {
       box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.3);
       width: 100%;
       height: auto;
+      .ios & {
       @include for-ipad-landscape {
         transform: scale(0.8);
+      }
       }
     }
 
@@ -531,8 +535,10 @@ h2 {
       @include for-phone-only {
         display: none;
       }
+      .ios & {
       @include for-ipad-landscape {
         display: none;
+      }
       }
     }
   }
@@ -646,9 +652,11 @@ h2 {
     font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Helvetica Neue", Sans-serif;
     font-weight: 300;
     color: white;
+    .ios & {
     @include for-ipad-landscape {
       top: -2px;
       left: 90px;
+    }
     }
     @include for-phone-only {
       top: inherit;
@@ -661,8 +669,10 @@ h2 {
     }
   }
   p {
+    .ios & {
     @include for-ipad-landscape {
       display: none;
+    }
     }
   }
   .macbank {
